<resources>
    <string name="app_name">trackmybusMain</string>
    <string name="splashfirstword">Your Journey,elevated</string>
    <string name="splashimgdesc">Track my bus logo</string>
    <string name="appname">Track My Bus</string>
    <string name="splashgetstarted">Get Started</string>
    <string name="onboardDescFirst">Secure your seat and leave the hustle behind book your bus ticket in advance</string>
    <string name="onboardDescSecond">Track your bus in real-time and bid farewell to the tension of missing the ride</string>
    <string name="onboardDescThird">Welcome to Track My Bus App Say goodbye to long queue and embrace convenience of booking your bus ticket</string>
    <string name="onboardHeadingFirst">Select Your Destination</string>
    <string name="onboardHeadingSecond">Track Your Bus</string>
    <string name="onboardHeadingThird">Enjoy Your Journey</string>
    <string name="btnskip">Skip >></string>
    <string name="login">Login</string>
    <string name="Signup">Sign-Up</string>
    <string name="logingreet">Welcome Back !</string>
    <string name="logingreetdesc">Login to your existing account</string>
    <string name="signupgreet">Let’s Get Started</string>
    <string name="signupgreetdesc">create an account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rememberMe">Remember Me</string>
    <string name="forgetPass">Forget Password</string>
    <string name="createacc">Create account</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="phonenum">Phone Number</string>
    <string name="next">Next</string>
    <string name="gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="trans">Other</string>
    <string name="selectage">Select Your Birth-Date</string>
    <string name="whoops">Whoops!</string>
    <string name="retry">Retry</string>
    <string name="nointernetconnection">No internet connection found \n check your connection</string>
    <string name="mybookings">My Bookings</string>
    <string name="ticketId">ABCD9334</string>
    <string name="busNo">Bus No :</string>
    <string name="passenger">Passengers</string>
    <string name="ticketid">Ticket ID :</string>
    <string name="Ticket">Ticket Details</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="onboarding">Boarding Time</string>
    <string name="boardintdate">Boarding Date</string>
    <string name="cancleTicket">Cancle Ticket</string>
    <string name="viewTickets">View Ticket</string>
    <string name="trackmybus">Track My Bus</string>
    <string name="hello">Hello,</string>

    <string name="busbooking">Bus Booking</string>
    <string name="trackyourbus">Track Bus</string>
    <string name="cancleticket">Cancel Ticket</string>
    <string name="mybooking">Bookings History</string>
    <string name="helpline">Helpline</string>
    <string name="yourprofile">Your Profile</string>
    <string name="title_activity_tracking_bus_real_time">TrackingBusRealTime</string>
    <string name="trackmybusApiKey">AIzaSyBUjabY0QN5x7_Ae6q2irHzVZ0XzLWoZ0w</string>
    <string name="submit">Submit</string>
    <string name="search_for_bus_tickets">Search for bus tickets</string>

</resources>