<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.Login"
    android:background="@color/white"
    android:padding="30dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/btnLoginBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btnback"
            android:padding="5dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/loginsvg"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logingreet"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:fontFamily="@font/poppinsemibold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logingreetdesc"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="12dp"
            android:fontFamily="@font/poppinsemibold"
            android:textColor="@color/text"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtxtUsername"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/username"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/usericon"
                app:startIconTint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppinsregular"
                    android:textColor="@color/black"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtxtPass"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/password"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                android:textColorHint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/passwordlock"
                app:startIconTint="@color/black"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppinsregular"
                    android:textColor="@color/black"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/cboxRemeberMe"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:buttonTint="@color/black"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/rememberMe"
                    android:textColor="@color/black" />
                <Button
                    android:id="@+id/btnForgetPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgetPass"
                    android:fontFamily="@font/poppinsregular"
                    android:background="@color/transparent"
                    android:textColor="@color/black"
                    android:paddingRight="10dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <Button
                android:id="@+id/btnLoginLoginPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:onClick="loginLoginPage"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/text"
                android:fontFamily="@font/poppinsemibold"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/btnCreateAccLoginPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createacc"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:fontFamily="@font/poppinsregular"
                android:background="@color/transparent"
                android:textColor="@color/black"
                android:onClick="createAccountSignUp"
                />

        </LinearLayout>
    </LinearLayout>

</ScrollView>