<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.StartScreen"
    android:background="@color/white"
    android:padding="30dp"
    >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="100dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/tmblogofinal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splashfirstword"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/poppinsemibold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onboardDescSecond"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinsregular"
                />

            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppinsemibold"
                android:background="@drawable/gradient"
                android:text="@string/login"
                android:onClick="loginScreen"
                android:layout_marginRight="10dp"
                />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppinsemibold"
                android:layout_marginLeft="10dp"
                android:onClick="signUpScreen"
                android:background="@drawable/gradient"
                android:text="@string/Signup"
                />
            </LinearLayout>
    </LinearLayout>
    </ScrollView>
