<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.SignUp"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/btnSignUpBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btnback"
            android:padding="5dp"
            android:onClick="signupBack" />
        <ImageView
            android:id="@+id/signUpPageImg"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/loginsvg"
           />
        <TextView
            android:id="@+id/textGetStartedSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signupgreet"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:fontFamily="@font/poppinsemibold"
           />
        <TextView
            android:id="@+id/createAccSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signupgreetdesc"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="12dp"
            android:fontFamily="@font/poppinsemibold"
            android:textColor="@color/text"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullname"
                app:startIconDrawable="@drawable/fullname"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:startIconDrawable="@drawable/usericon"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/mailicon"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/passwordlock"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <Button
            android:id="@+id/btnNextSignUpPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:backgroundTint="@color/text"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:onClick="loginNext"
            android:fontFamily="@font/poppinsemibold"
          >

        </Button>

        <Button
            android:id="@+id/btnLoginSignUpPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:backgroundTint="@color/text"
            android:fontFamily="@font/poppinsemibold"
            android:text="@string/login"
            android:onClick="login"
            android:textColor="@color/black"
           >

        </Button>


    </LinearLayout>

</ScrollView>