<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/internetconnection"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whoops"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinsemibold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nointernetconnection"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinsregular"
            android:textSize="12sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
        >
            <Button
                android:id="@+id/btnretry"
                android:backgroundTint="@color/text"
                android:textColor="@color/white"
                android:fontFamily="@font/poppinsemibold"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry"
                android:layout_gravity="center"
                android:gravity="center"
                />

        </LinearLayout>
    </LinearLayout>

</ScrollView>